Fix star spacing... again

--- a/app/assets/stylesheets/style_guide.css.scss
+++ b/app/assets/stylesheets/style_guide.css.scss
@@ -1526,7 +1526,8 @@ input[type=checkbox].css-checkbox {
   text-align: left;
   margin-top: -33px;
   position: relative;
-  width: 60px;
+  width: 100px;
+  padding-left: 20px;
   top: -7px;
 }
 
